--- a/src/main/resources/assets/bendymod/lang/en_us.json
+++ b/src/main/resources/assets/bendymod/lang/en_us.json
@@ -29,6 +29,7 @@
   "entity.bendymod.boris_buddy": "Buddy Boris",
   "entity.bendymod.searcher": "Searcher",
   "block.bendymod.sign_dark": "Sign (Dark)",
+  "block.bendymod.solid_ink_rl": "Solid Ink (RL)",
   "block.bendymod.ink_barrel": "Ink Barrel",
   "block.bendymod.painting_book": "Painting (Book)",
   "item.bendymod.searcher_spawn_egg": "Searcher Spawn Egg",
@@ -162,6 +163,7 @@
   "block.bendymod.poster_large_train_trouble": "Large Poster (Train Trouble)",
   "block.bendymod.lever_power_on": "Power Lever",
   "fluid.bendymod.ink": "Ink",
+  "fluid.bendymod.ink_rl": "Ink (RL)",
   "block.bendymod.jds_sign": "Joey Drew Studios Sign",
   "block.bendymod.studio_floor": "Studio Floor",
   "block.bendymod.stiff_studio_door_basic": "Stiff Studio Basic Door",
@@ -187,6 +189,7 @@
   "block.bendymod.ink_puddle_spawner": "Ink Puddle (Spawner)",
   "block.bendymod.gear_rl": "Gear (RL)",
   "subtitles.sammy_footstep": "Sammy Steps",
+  "block.bendymod.ink_rl": "Ink (RL)",
   "block.bendymod.dresser": "Dresser",
   "block.bendymod.inactive_stairway_structure_block": "Inactive Stairway Structure Block",
   "block.bendymod.writing_down_here_were_all_sinners": "Ink Writing (Down Here We\u0027re All Sinners)",
