--- a/src/main/resources/assets/bendymod/lang/en_us.json
+++ b/src/main/resources/assets/bendymod/lang/en_us.json
@@ -146,6 +146,7 @@
   "block.bendymod.soup_candle": "Soup Candle",
   "block.bendymod.studio_lamp": "Studio Lamp",
   "block.bendymod.studio_floor_slab": "Studio Floor Slab",
+  "gui.bendymod.tape_overlay.label_sammy_lawrence": "Sammy Lawrence",
   "block.bendymod.gent_structure_block": "Gent Structure Block",
   "subtitles.sammy_hit": "Sammy is hit",
   "block.bendymod.reel": "Reel",
